--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Changed Web Title name tag to Horiseon -->
     <title>Horiseon**</title>
 </head>
 
